<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.34" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guideline10"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/expression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/result"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:layout_width="135dp"
        android:layout_height="5dp"
        android:background="@drawable/grey"
        app:layout_constraintTop_toTopOf="@id/guideline10"
        app:layout_constraintBottom_toBottomOf="@id/guideline9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_ac"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/ac"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/button_orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/guideline9"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/_7"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/button_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/guideline8"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/_4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/button_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/guideline7"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_margin="8dp"
        android:background="@drawable/button_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/guideline6"
        app:layout_constraintBottom_toBottomOf="@+id/guideline5"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/percent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:background="@drawable/button_white"
        app:layout_constraintTop_toTopOf="@id/guideline9"
        app:layout_constraintBottom_toBottomOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/_8"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/button_white"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="@id/guideline8"
        app:layout_constraintBottom_toBottomOf="@id/guideline7"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/_5"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/button_white"
        app:layout_constraintTop_toTopOf="@id/guideline7"
        app:layout_constraintBottom_toBottomOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/_2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/button_white"
        app:layout_constraintTop_toTopOf="@id/guideline6"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/divide"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:background="@drawable/button_white"
        app:layout_constraintTop_toTopOf="@id/guideline9"
        app:layout_constraintBottom_toBottomOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/_9"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/button_white"
        app:layout_constraintTop_toTopOf="@id/guideline8"
        app:layout_constraintBottom_toBottomOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/_6"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/button_white"
        app:layout_constraintTop_toTopOf="@id/guideline7"
        app:layout_constraintBottom_toBottomOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/_3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/button_white"
        app:layout_constraintTop_toTopOf="@id/guideline6"
        app:layout_constraintBottom_toBottomOf="@id/guideline5"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/x"
        android:textSize="20sp"
        android:textColor="@color/orange"
        android:background="@drawable/button_white"
        app:layout_constraintTop_toTopOf="@id/guideline9"
        app:layout_constraintBottom_toBottomOf="@id/guideline8"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/plus"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:background="@drawable/button_white"
        app:layout_constraintTop_toTopOf="@id/guideline8"
        app:layout_constraintBottom_toBottomOf="@id/guideline7"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/minus"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:background="@drawable/button_white"
        app:layout_constraintTop_toTopOf="@id/guideline7"
        app:layout_constraintBottom_toBottomOf="@id/guideline6"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/nol"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/button_white"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/dot"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:background="@drawable/button_white"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="@id/guideline3"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_equals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/equal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/button_orange"
        app:layout_constraintTop_toTopOf="@id/guideline6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>